master/todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: NodePort
  selector:
    app: todo           # deployment.yaml의 labels.matchLabels와 반드시 일치!
  ports:
    - protocol: TCP
      port: 5000        # 외부에서 접근할 서비스 포트 (브라우저가 접속하는 포트)
      targetPort: 5000  # 실제 컨테이너 내부 Flask 앱이 리스닝 중인 포트
      nodePort: 30080   # 외부에서 접근할 수 있는 고정 포트 (30000~32767 사이 선택)
